@@ -13,3 +13,13 @@
 
 #frame form{ text-align: right; }
 label { float:right; }
+
+/* -- message styles ----------------------------------- */
+.alert {
+	padding: 8px 8px 25px 14px;
+	text-align: right;
+}
+.alert .close {
+	float: left;
+	left: -20px;
+}
