@@ -9,6 +9,10 @@
 
 defined('_JEXEC') or die;
 $app = JFactory::getApplication();
+
+// Add JavaScript Frameworks
+JHtml::_('bootstrap.framework');
+
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->language; ?>" lang="<?php echo $this->language; ?>" dir="<?php echo $this->direction; ?>">
