@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#31314] language change dropdown at installation don't work if you scroll down. Thanks Lu Nguyen
  # [#23638] *Uninstalling 2 different extensions gets only one message. Thanks Thong Tran
  # [#31683] In debug mode with mysqli some extensions have warnings when freeing mysqli cursor themselves. Thanks Beat
+ # [#31410] Warnings at the offline screen looks bad. Thanks Lu Nguyen
 
 06-Aug-2013 Jean-Marie Simonet
  # [#31478] User Note could be saved without User ID. THanks Khai Vu Dinh
